# football-forecast

./: .env.example  .gitignore  README.md  pyproject.toml  roadmap.md
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: .env.example  __init__.py  main.py  store.py
app/static/: style.css
app/templates/: _fixtures.html  _macros.html  base.html  fixtures.html  index.html  match.html
configs/: intl.toml  league_e0.toml
deploy/: DEPLOY.md
docs/: architecture.md  data.md  decisions.md  implementation-plan.md  modeling-guidelines.md  models-explained.md  project-structure.md  workflow.md
pipelines/: __init__.py  _common.py  backtest.py  forecast.py  import_fixtures.py  ingest.py  ingest_league.py  process_queue.py  run.py  train.py  wc2026.py
research/: exp_halflife.py  exp_phase3.py  exp_phase4.py  exp_phase5.py
research/notes/: 00-scope.md  01-phase1-elo.md  02-phase2-dixon-coles.md  03-phase3-bayesian.md  04-phase4-leagues.md  05-phase5-boosting.md  README.md
src/football_forecast/: __init__.py  config.py  fixtures_import.py  fixtures_queue.py  provenance.py
src/football_forecast/data/: __init__.py  schema.py
src/football_forecast/eval/: __init__.py  backtest.py  calibration.py  market.py  metrics.py
tests/: test_app_store.py  test_backtest.py  test_bayesian.py  test_boosting.py  test_bundle.py  test_calibration.py  test_config_provenance.py  test_dixon_coles.py  test_elo.py  test_fixtures.py  test_fixtures_import.py  test_keystone.py  test_metrics.py  test_phase4.py  test_schema.py  test_store.py
(+20 files in other folders)
