[project]
name = "football-forecast"
version = "0.0.0"
description = "From-first-principles football match forecasting (scoreline, 1X2, counts)."
readme = "README.md"
requires-python = ">=3.11"

# Core / app dependencies — light enough to install on the arm64 Pi.
# The dashboard installs ONLY these.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Heavy training/research stack — installed on the PC only, never on the Pi.
research = [
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "pymc>=5.10",
    "arviz>=0.17",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "pyarrow>=15.0",       # parquet
    "soccerdata>=1.6",     # FBref/Understat
    "statsbombpy>=1.11",   # national-team event data
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
